force-app/main/default/objects/Entitlement__c/fields/InvoiceLineItem__c.field-meta.xml
<CustomField>
    <fullName>InvoiceLineItem__c</fullName>
    <label>Invoice Line Item</label>
    <referenceTo>InvoiceLine</referenceTo>
    <relationshipLabel>Entitlements</relationshipLabel>
    <relationshipName>Entitlements</relationshipName>
    <type>Lookup</type>
</CustomField>